Stop media playing when panel is not visible, fix text wrapping in checklist, non-display of phyla without Hulq names

--- a/docs/css/xetthecum.css
+++ b/docs/css/xetthecum.css
@@ -160,6 +160,12 @@ body #quarto-content {
     text-indent: -28px;
 }
 
+.imerss-checklist li:has(>.checklist-rank-species) {
+    text-indent: -80px;
+    margin-left: 80px;
+}
+
+
 .cultural-activities {
     display: table;
 }
